--- a/frontEnd/src/scss/_custom.scss
+++ b/frontEnd/src/scss/_custom.scss
@@ -1,1 +1,8 @@
 // Here you can add other styles
+@import url('https://fonts.googleapis.com/css?family=Alex+Brush');
+
+.logo-font {
+  font-family: 'Alex Brush', serif;
+  text-shadow: 2px 2px 10px;
+  color: balck;
+}
