--- a/frontEnd/src/scss/_custom.scss
+++ b/frontEnd/src/scss/_custom.scss
@@ -1,1 +1,6 @@
 // Here you can add other styles
+.product_img {
+  max-width: 100%;
+  max-height: 250px;
+  object-fit: contain; // keeps the aspect ratio
+}
