--- a/frontEnd/src/scss/_custom.scss
+++ b/frontEnd/src/scss/_custom.scss
@@ -1,6 +1,10 @@
 // Here you can add other styles
-.product_img {
+.product_list_img {
   max-width: 100%;
   max-height: 250px;
   object-fit: contain; // keeps the aspect ratio
+}
+.search-nav-bar {
+  width: 50%;
+  min-width: 250px;
 }
